tests/fixtures/invalid/pow_none_int_bool.py
# Cannot call pow() with None, Int, Bool
x = pow(None, 1, True)
